Add API Postman collection
Additionally, the /request endpoint has been changed to /execute
